--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   mqtt_client: ^9.6.7
+  settings_ui: ^2.0.2
   syncfusion_flutter_gauges: ^18.2.44
   #flutter_email_sender: ^5.0.2
   intl: ^0.17.0
@@ -41,7 +42,7 @@ dependencies:
   url_strategy: ^0.2.0
   url_launcher: ^6.0.15
   clipboard: ^0.1.3
-  email_validator: ^2.0.1
+  #email_validator: ^2.0.1
   provider: ^6.0.1
   fluent_ui: ^3.8.0
   http: ^0.13.4
