--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,11 @@ dependencies:
   settings_ui: ^2.0.2
   syncfusion_flutter_gauges: ^18.2.44
   #flutter_email_sender: ^5.0.2
+  flutter_phone_direct_caller: ^2.0.0
+  app_settings: ^4.1.5
   intl: ^0.17.0
+  device_apps: ^2.2.0
+  android_intent_plus: ^3.1.1
   path_provider: ^2.0.9
   slide_digital_clock: ^1.0.2
   cupertino_icons: ^1.0.2
@@ -40,7 +44,7 @@ dependencies:
   bitsdojo_window: ^0.1.1+1
   flutter_acrylic: ^0.1.0
   url_strategy: ^0.2.0
-  url_launcher: ^6.0.15
+  url_launcher: ^6.1.0
   clipboard: ^0.1.3
   #email_validator: ^2.0.1
   provider: ^6.0.1
